src/objects/Answer__c.object
<CustomObject>
    <fields>
        <fullName>AnswerOption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Answer Option</label>
        <referenceTo>AnswerOption__c</referenceTo>
        <relationshipName>Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionResponse__c</fullName>
        <label>Question Response</label>
        <referenceTo>QuestionResponse__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TextValue__c</fullName>
        <label>Text Value</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Answer</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AnswerResponseCannotBeEdited</fullName>
        <active>true</active>
        <description>An answer response cannot be edited.</description>
        <errorConditionFormula>NOT( ISNEW() )</errorConditionFormula>
        <errorMessage>An answer response cannot be edited.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidateAnswerLookup</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK( AnswerOption__c )),  AnswerOption__r.Question__c !=  QuestionResponse__r.Question__c )</errorConditionFormula>
        <errorMessage>The answer must belong to the same question.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidateAnswerRequired</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISPICKVAL(QuestionResponse__r.Question__r.Type__c, &apos;Matching Options&apos;)), ISBLANK( AnswerOption__c ))</errorConditionFormula>
        <errorDisplayField>AnswerOption__c</errorDisplayField>
        <errorMessage>The answer is required.</errorMessage>
    </validationRules>
</CustomObject>